tests/negative/invalid_ident.rms
cat("A-Z", 1)
REPEAT(5,
    ANY(
        @"cat",
        repeat(
            1,
            @"hello",
            VARCHAR("aad", 1)
        ),
        any(
            @"cat",
            @"dog"
        )
    )
)
